# pumpp

./: .gitignore  .travis.yml  .travis_dependencies.sh  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  setup.cfg  setup.py
.github/: environment-ci.yml
.github/workflows/: ci.yml  tests.yml
docs/: Makefile  api.rst  changes.rst  conf.py  index.rst
pumpp/: __init__.py  base.py  core.py  exceptions.py  labels.py  sampler.py  util.py  version.py
pumpp/feature/: __init__.py  _utils.py  base.py  cqt.py  fft.py  mel.py  rhythm.py  time.py
pumpp/task/: __init__.py  base.py  beat.py  chord.py  event.py  key.py  lambd.py  regression.py  structure.py  tags.py
pumpp/time/: __init__.py  base.py  beat.py
tests/: test_core.py  test_decode.py  test_feature.py  test_misc.py  test_sampler.py  test_task.py  test_utils.py
