[pycodestyle]
max-line-length=119

[tool:pytest]
addopts = --cov-report term-missing --cov pumpp --cov-report=xml
xfail_strict = true
filterwarnings =
    ignore:Using a non-tuple sequence:FutureWarning:scipy.*


[coverage:report]
omit =
    */python?.?/*
    */site-packages/nose/*
    pumpp/labels.py


[metadata]
name = pumpp
version = attr: pumpp.version.version
description = A practically universal music pre-processor
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/bmcfee/pumpp
author = Brian McFee
license = ISC
license_file = LICENSE.md
license_file_content_type = text/markdown; charset=UTF-8
project_urls = 
    Source = https://github.com/bmcfee/pumpp
    Download = https://github.com/bmcfee/pumpp/releases
classifiers =
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    librosa >= 0.8.0
    jams >= 0.3
    scikit-learn >= 1.0
    mir_eval >= 0.5
python_requires = >= 3.6

[options.extras_require]
docs  =
    numpydoc
    sphinx
tests = 
    pytest
    pytest-cov
    keras >= 2.6
    tensorflow >= 2.0
keras = 
    keras >= 2.6
